Added sonarqube to Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: java
 jdk:
 - oraclejdk11
+addons:
+  sonarcloud:
+    organization: "2020-2021-ecom-info5-g6"
+    token:
+      secure: "$SONAR_APP_TOKEN" 
+
+script:
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=2020-2021-ECOM-INFO5-G6_app
