--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
   sonarcloud:
     organization: "2020-2021-ecom-info5-g6"
     token:
-      secure: "$SONAR_APP_TOKEN" 
+      secure: "$SONAR_TOKEN" 
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
