--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
             <version>8.4.1.jre11</version>
         </dependency>
         <dependency>
+            <groupId>com.github.sabomichal</groupId>
+            <artifactId>liquibase-mssql</artifactId>
+            <version>1.5</version>
+        </dependency>
+        <dependency>
             <groupId>io.github.jhipster</groupId>
             <artifactId>jhipster-framework</artifactId>
         </dependency>
