--- a/pom.xml
+++ b/pom.xml
@@ -105,8 +105,8 @@
     <dependencies>
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
-            <version>8.4.1.jre11</version>
+            <artifactId>sqljdbc41</artifactId>
+            <version>4.1</version>
         </dependency>
         <dependency>
             <groupId>com.github.sabomichal</groupId>
